[ELI-68] Fixed replaceable items overflowing dialog boundaries

--- a/ui.apps/src/main/content/jcr_root/apps/etoolbox-link-inspector/clientlibs/link-inspector-ui/css/console-ui.less
+++ b/ui.apps/src/main/content/jcr_root/apps/etoolbox-link-inspector/clientlibs/link-inspector-ui/css/console-ui.less
@@ -93,6 +93,8 @@
 .elc-dialog {
   vertical-align: middle;
   .coral3-Dialog-wrapper {
+    max-height: 80vh;
+    overflow-y: scroll;
     width: 40vw;
   }
 }
@@ -104,6 +106,10 @@
 .elc-processing-link-list {
   > li {
     font-weight: bold;
+    display: -webkit-box;
+    overflow: hidden;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 2;
   }
 }
 
